# OCP-CE-HR-Policy-Searcher

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTINUITY.md  CONTRIBUTING.md  Dockerfile  README.md  checklist.md  cli_web_interface.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  setup.ps1  setup.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  monthly-scan.yml  monthly_scan.yml  weekly-signals.yml
DeepResearch/: Grid Information.md  Grid_1_1_compass_artifact_wf-008b8905-1f3a-4eab-9800-ae413dde61fc_text_markdown.md  Grid_1_2_uk_legislative_systems_config.md  Grid_1_3_uk_district_heating_config.md  Grid_1_4_uk_grid_operators_config.md  Grid_1_5_UK_Economic_Development_Summary.md  Grid_1_5_domains_uk_economic_development.yaml  Grid_5_1_compass_artifact_wf-3585ff2f-424e-4084-989e-0b3c8cb43827_text_markdown.md  Grid_6_1_us_states_energy_offices_grid_6_1.yaml  Grid_6_2_us_states_legislative_systems_grid_6_2.yaml  Grid_6_3_compass_artifact_wf-1a092afc-f5b2-4db4-a0e2-1f63417c7afa_text_markdown.md  Grid_6_4_compass_artifact_wf-fef30edb-6bce-4545-93e1-bc63f990d375_text_markdown.md  Grid_6_5_us_states_economic_dev.yaml
config/: content_extraction.yaml  credentials.yaml.example  directives.yaml  domains.yaml  example.env  groups.yaml  jurisdictions.yaml  keywords.yaml  notifications.yaml  rejected_sites.yaml  settings.yaml  signals.yaml  url_filters.yaml
config/domains/: _template.yaml  apac.yaml  api_sources.yaml  australia.yaml  austria.yaml  belgium.yaml  brazil.yaml  canada.yaml  denmark.yaml  estonia.yaml  eu.yaml  france.yaml  germany.yaml  india.yaml  ireland.yaml  luxembourg.yaml  mexico.yaml  netherlands.yaml  nordic.yaml  saudi_arabia.yaml  south_africa.yaml  sweden.yaml  switzerland.yaml  (+4 more)
data/: policies.json  url_cache.json
docs/: 20260203_2312_DeepResearch_FixingTheFocusedCrawler.md  ACCOMPLISHMENTS.md  ACCOMPLISHMENTS_2026-01-05.md  Backlog_20260204.md  CONTINUITY.md  ImplementationRequest_ClaudeCode.md  MAP_ARCHITECTURE.md  OPERATIONS.md  SESSION_SUMMARY.md  analysis_hb323_pipeline_problem.md
frontend/: .gitignore  package-lock.json  package.json  playwright.config.js
scripts/: build_explorer.py
src/: App.css  exceptions.py  main.py
tests/: conftest.py
(+329 files in other folders)
